--- a/en/index.html
+++ b/en/index.html
@@ -6,7 +6,9 @@
     <!-- Başlık ve açıklamayı İngilizce'ye çevirdik -->
     <title>DEEP BRAIN: Neurologist-Guided Cognitive & Brain Exercises</title>
     <meta name="description" content="Improve your memory, attention, and problem-solving skills with free, science-based cognitive exercises guided by a neurologist. Keep your brain fit with our games.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/index.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/index.html" />
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/en/index.html" />
     <!-- Linkler ana dizinden çağrıldığı için aynı kalıyor -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
