--- a/en/blog.html
+++ b/en/blog.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Mental Health from a Neurologist's Perspective | DEEP BRAİN</title>
     <meta name="description" content="Articles and scientific tips written by a neurologist on brain health, memory, attention and learning.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/blog.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/blog.html" />
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/en/blog.html" />
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
