--- a/en/about.html
+++ b/en/about.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About- DEEP BRAİN</title>
     <meta name="description" content="Learn about the founder of the DEEP BRAIN project. Our mission and vision as a neurologist.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/hakkimda.html" /> <!-- Türkçe adı "hakkimda.html" -->
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/about.html" />
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/en/about.html" />
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
