--- a/en/article-memory-how-to-strengthen.html
+++ b/en/article-memory-how-to-strengthen.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5 Scientific Ways to Strengthen Your Memory | DEEP BRAİN Blog</title>
     <meta name="description" content="Learn 5 effective and scientifically proven memory strengthening techniques against forgetfulness from a neurologist's perspective. Improve your brain health today.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/makale-hafiza-nasil-guclenir.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/article-memory-how-to-strengthen.html" />
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/en/article-memory-how-to-strengthen.html" />
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
