--- a/en/nutrition-cognitive-effects.html
+++ b/en/nutrition-cognitive-effects.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boost Your Brain Power: The Effect of Nutrition on Cognitive Functions</title>
     <meta name="description" content="A nutrition guide for brain health from a neurologist's perspective. Discover foods that strengthen memory and attention with scientific evidence such as omega-3, flavonoids, and the Mediterranean diet.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/beslenme-bilissel-etkiler.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/nutrition-cognitive-effects.html" />
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/en/nutrition-cognitive-effects.html" />
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
