--- a/en/stroop-test-science.html
+++ b/en/stroop-test-science.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Science Behind the Stroop Test | DEEP BRAİN Blog</title>
     <meta name="description" content="The Stroop Effect from a Neurologist's Perspective: How Does Our Brain Deal with Contradictory Information? Explore selective attention and inhibition mechanisms.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/stroop-testi-bilimi.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/stroop-test-science.html" />
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/en/stroop-test-science.html" />
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
