--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             /* Arka Plan Resmi ve Efektleri */
             background-image: 
                 linear-gradient(rgba(44, 62, 80, 0.85), rgba(44, 62, 80, 0.85)), /* Üstüne koyu bir katman */
-                url('https://images.unsplash.com/photo-1534787235332-7a2480643725?q=80&w=2070&auto=format&fit=crop');
+                url('/background.jpg');
             background-size: cover;
             background-position: center center;
         }
