--- a/tr/index.html
+++ b/tr/index.html
@@ -33,7 +33,7 @@
 
     <main>
         <section id="homepage-main-content" class="homepage-content">
-            <img src="/image_8b5565.jpg" alt="Soyut Beyin Ağı Görseli" class="hero-image">
+            <img src="brainmrısynapsis.webp" alt="Soyut Beyin Ağı Görseli" class="hero-image">
             <h2>Zihninizi Keşfedin, Potansiyelinizi Açığa Çıkarın</h2>
             <p>
                 DEEP BRAİN, bir nöroloji doktorunun rehberliğinde, bilimsel temelli zihin egzersizleri ve nöropsikometrik testler sunan kapsamlı bir platformdur. Amacımız, hafızanızı keskinleştirmek, dikkatinizi artırmak, problem çözme becerilerinizi geliştirmek ve genel bilişsel sağlığınızı desteklemektir. Ücretsiz ve etkileşimli oyunlarımızla beyin fitness'ınızı bir üst seviyeye taşıyın.
