--- a/en/index.html
+++ b/en/index.html
@@ -33,7 +33,7 @@
 
     <main>
         <section id="homepage-main-content" class="homepage-content">
-            <img src="/image_8b5565.jpg" alt="Abstract Brain Network Image" class="hero-image">
+            <img src="/brainmrısynapsis.webp" alt="Abstract Brain Network Image" class="hero-image">
             <h2>Explore Your Mind, Unlock Your Potential</h2>
             <p>
                 DEEP BRAIN is a comprehensive platform offering science-based cognitive exercises and neuropsychometric tests, guided by a neurologist. Our goal is to sharpen your memory, enhance your attention, improve your problem-solving skills, and support your overall cognitive health. Elevate your brain fitness with our free and interactive games.
