--- a/tr/index.html
+++ b/tr/index.html
@@ -39,8 +39,9 @@
                 DEEP BRAİN, bir nöroloji doktorunun rehberliğinde, bilimsel temelli zihin egzersizleri ve nöropsikometrik testler sunan kapsamlı bir platformdur. Amacımız, hafızanızı keskinleştirmek, dikkatinizi artırmak, problem çözme becerilerinizi geliştirmek ve genel bilişsel sağlığınızı desteklemektir. Ücretsiz ve etkileşimli oyunlarımızla beyin fitness'ınızı bir üst seviyeye taşıyın.
             </p>
             <div class="call-to-action-buttons">
-                <a href="#" class="cta-button primary" data-nav="games-cta">Zihinsel Egzersizlere Başla</a>
-                <a href="/tr/hakkimda.html" class="cta-button secondary" data-nav="about-cta">Hakkımızda Daha Fazla Bilgi Edinin</a>
+                <a href="#" class="cta-button" data-nav="games-cta">Zihinsel Egzersiz & Oyunlar</a>
+                <a href="#" class="cta-button" data-nav="tests-cta">Bilişsel Testler</a>
+                <a href="/tr/blog.html" class="cta-button" data-nav="blog-cta">Makale ve Bilimsel İçerikler</a>
             </div>
         </section>
 
