--- a/en/index.html
+++ b/en/index.html
@@ -39,8 +39,9 @@
                 DEEP BRAIN is a comprehensive platform offering science-based cognitive exercises and neuropsychometric tests, guided by a neurologist. Our goal is to sharpen your memory, enhance your attention, improve your problem-solving skills, and support your overall cognitive health. Elevate your brain fitness with our free and interactive games.
             </p>
             <div class="call-to-action-buttons">
-                <a href="#" class="cta-button primary" data-nav="games-cta">Start Cognitive Exercises</a>
-                <a href="/en/about.html" class="cta-button secondary" data-nav="about-cta">Learn More About Us</a>
+                <a href="#" class="cta-button" data-nav="games-cta">Cognitive Exercises & Games</a>
+                <a href="#" class="cta-button" data-nav="tests-cta">Cognitive Tests</a>
+                <a href="/en/blog.html" class="cta-button" data-nav="blog-cta">Articles & Scientific Content</a>
             </div>
         </section>
 
