--- a/tr/index.html
+++ b/tr/index.html
@@ -23,11 +23,11 @@
         <h1>DEEP BRAİN</h1>
         <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
         <nav class="main-nav">
-            <a href="/tr/index.html" class="active" data-nav="home">Ana Sayfa</a>
-            <a href="#" data-nav="games">Zihinsel Egzersiz & Oyunlar</a>
-            <a href="#" data-nav="tests">Bilişsel Testler</a>
-            <a href="/tr/blog.html" data-nav="blog">Blog</a>
-            <a href="/tr/hakkimda.html" data-nav="about">Hakkımda</a>
+            <a href="/tr/index.html" class="active">Ana Sayfa</a>
+            <a href="/tr/games.html">Zihinsel Egzersiz & Oyunlar</a>
+            <a href="/tr/tests.html">Bilişsel Testler</a>
+            <a href="/tr/blog.html">Blog</a>
+            <a href="/tr/hakkimda.html">Hakkımda</a>
         </nav>
     </header>
 
@@ -39,31 +39,13 @@
                 DEEP BRAİN, bir nöroloji doktorunun rehberliğinde, bilimsel temelli zihin egzersizleri ve nöropsikometrik testler sunan kapsamlı bir platformdur. Amacımız, hafızanızı keskinleştirmek, dikkatinizi artırmak, problem çözme becerilerinizi geliştirmek ve genel bilişsel sağlığınızı desteklemektir. Ücretsiz ve etkileşimli oyunlarımızla beyin fitness'ınızı bir üst seviyeye taşıyın.
             </p>
             <div class="call-to-action-buttons">
-                <a href="#" class="cta-button" data-nav="games-cta">Zihinsel Egzersiz & Oyunlar</a>
-                <a href="#" class="cta-button" data-nav="tests-cta">Bilişsel Testler</a>
-                <a href="/tr/blog.html" class="cta-button" data-nav="blog-cta">Makale ve Bilimsel İçerikler</a>
+                <a href="/tr/games.html" class="cta-button">Zihinsel Egzersiz & Oyunlar</a>
+                <a href="/tr/tests.html" class="cta-button">Bilişsel Testler</a>
+                <a href="/tr/blog.html" class="cta-button">Makale ve Bilimsel İçerikler</a>
             </div>
         </section>
 
-        <div id="selection-screen" class="hidden">
-            <h2>Hangi Becerinizi Geliştirmek İstersiniz?</h2>
-            <div class="game-selection-container">
-                <button class="game-choice" data-game="adam-asmaca">Adam Asmaca (Dil Becerisi)</button>
-                <button class="game-choice" data-game="sirali-hatirlama">Sıralı Hatırlama (Hafıza)</button>
-                <button class="game-choice" data-game="stroop-testi">Stroop Testi (Dikkat)</button>
-                <button class="game-choice" data-game="n-back">N-Back Testi (Çalışma Belleği)</button>
-            </div>
-        </div>
-
-        <div id="cognitive-tests-screen" class="hidden">
-            <h2>Bilişsel Testler</h2>
-            <div class="game-selection-container">
-                <button class="game-choice" data-game="wcst">Wisconsin Kart Eşleştirme Testi</button>
-                <button class="game-choice" data-game="trail-making">İz Sürme Testi (Yakında!)</button>
-            </div>
-        </div>
-
-        <div id="game-container" class="hidden">
+        <div id="game-container" class="hidden"> 
             <div id="game-content"></div>
             <button id="back-to-menu">Ana Menüye Dön</button>
         </div>
@@ -72,6 +54,5 @@
     <footer>
         <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
-    <script src="/script.js"></script>
-</body>
+    </body>
 </html>
