--- a/en/index.html
+++ b/en/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DEEP BRAIN: Neurologist-Guided Cognitive & Brain Exercises</title>
-    <meta name="description" content="Improve your memory, attention, and problem-solving skills with free, science-based cognitive exercises guided by a neurologist. Keep your brain fit with our games.">
     <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/index.html" />
     <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/index.html" />
     <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/en/index.html" />
+    <meta name="description" content="Improve your memory, attention, and problem-solving skills with free, science-based cognitive exercises guided by a neurologist. Keep your brain fit with our games.">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -23,11 +23,11 @@
         <h1>DEEP BRAIN</h1>
         <p>Cognitive Exercises Guided by a Neurology Doctor</p>
         <nav class="main-nav">
-            <a href="/en/index.html" class="active" data-nav="home">Home</a>
-            <a href="#" data-nav="games">Cognitive Exercises & Games</a>
-            <a href="#" data-nav="tests">Cognitive Tests</a>
-            <a href="/en/blog.html" data-nav="blog">Blog</a>
-            <a href="/en/about.html" data-nav="about">About</a>
+            <a href="/en/index.html" class="active">Home</a>
+            <a href="/en/games.html">Cognitive Exercises & Games</a>
+            <a href="/en/tests.html">Cognitive Tests</a>
+            <a href="/en/blog.html">Blog</a>
+            <a href="/en/about.html">About</a>
         </nav>
     </header>
 
@@ -39,31 +39,13 @@
                 DEEP BRAIN is a comprehensive platform offering science-based cognitive exercises and neuropsychometric tests, guided by a neurologist. Our goal is to sharpen your memory, enhance your attention, improve your problem-solving skills, and support your overall cognitive health. Elevate your brain fitness with our free and interactive games.
             </p>
             <div class="call-to-action-buttons">
-                <a href="#" class="cta-button" data-nav="games-cta">Cognitive Exercises & Games</a>
-                <a href="#" class="cta-button" data-nav="tests-cta">Cognitive Tests</a>
-                <a href="/en/blog.html" class="cta-button" data-nav="blog-cta">Articles & Scientific Content</a>
+                <a href="/en/games.html" class="cta-button">Cognitive Exercises & Games</a>
+                <a href="/en/tests.html" class="cta-button">Cognitive Tests</a>
+                <a href="/en/blog.html" class="cta-button">Articles & Scientific Content</a>
             </div>
         </section>
-
-        <div id="selection-screen" class="hidden">
-            <h2>Which skill would you like to improve?</h2>
-            <div class="game-selection-container">
-                <button class="game-choice" data-game="adam-asmaca">Hangman (Language)</button>
-                <button class="game-choice" data-game="sirali-hatirlama">Sequence Memory (Memory)</button>
-                <button class="game-choice" data-game="stroop-testi">Stroop Test (Attention)</button>
-                <button class="game-choice" data-game="n-back">N-Back Test (Working Memory)</button>
-            </div>
-        </div>
-
-        <div id="cognitive-tests-screen" class="hidden">
-            <h2>Cognitive Tests</h2>
-            <div class="game-selection-container">
-                <button class="game-choice" data-game="wcst">Wisconsin Card Sorting Test</button>
-                <button class="game-choice" data-game="trail-making">Trail Making Test (Coming Soon!)</button>
-            </div>
-        </div>
-
-        <div id="game-container" class="hidden">
+        
+        <div id="game-container" class="hidden"> 
             <div id="game-content"></div>
             <button id="back-to-menu">Back to Menu</button>
         </div>
@@ -72,6 +54,5 @@
     <footer>
         <p>© 2025 - Deep Brain. All rights reserved.</p>
     </footer>
-    <script src="/script.js"></script>
 </body>
 </html>
