--- a/tr/beslenme-bilissel-etkiler.html
+++ b/tr/beslenme-bilissel-etkiler.html
@@ -36,7 +36,7 @@
         <div class="page-container">
             <article class="full-article">
                 <h1>Beyin Gücünüzü Artırın: Beslenmenin Bilişsel Fonksiyonlara Etkisi</h1>
-                <p class="article-meta">Yazar: [Adınız Soyadınız, Ünvanınız] - Yayınlanma Tarihi: [Bugünün Tarihi]</p>
+                <p class="article-meta">Yazar: Uzm. Dr. Abdulkadir Ermiş - Yayınlanma Tarihi: 10.06.2025</p>
                 <p>Modern yaşamın getirdiği yoğun tempo içinde zihinsel performansımızı en üst düzeyde tutmak hepimizin ortak hedefi. Peki, "ne yiyorsak o'yuz" deyişinin beynimiz için de geçerli olduğunu biliyor muydunuz? Nörolojik araştırmalar, tükettiğimiz besinlerin hafıza, dikkat, öğrenme gibi bilişsel fonksiyonlarımız üzerinde doğrudan ve güçlü bir etkiye sahip olduğunu gösteriyor. Bu yazıda, beyninizi en iyi şekilde beslemenin bilimsel yollarını inceleyeceğiz.</p>
                 <h2>Beyin İçin Süper Yakıtlar: Makro ve Mikro Besinler</h2>
                 <p>Beynimiz, vücut ağırlığımızın sadece %2'sini oluşturmasına rağmen, enerjimizin yaklaşık %20'sini tek başına tüketir. Bu yüksek enerji ihtiyacını karşılamak ve nöronlar arası iletişimi sağlıklı tutmak için doğru yakıtlara ihtiyacı vardır.</p>
