--- a/tr/index.html
+++ b/tr/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <h1>DEEP BRAİN</h1>
-        <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
+        <p>Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
         <nav class="main-nav">
             <a href="/tr/index.html" class="active">Ana Sayfa</a>
             <a href="/tr/games.html">Zihinsel Egzersiz & Oyunlar</a>
@@ -36,7 +36,7 @@
             <img src="/brainmrısynapsis.webp" alt="Soyut Beyin Ağı Görseli" class="hero-image">
             <h2>Zihninizi Keşfedin, Potansiyelinizi Açığa Çıkarın</h2>
             <p>
-                DEEP BRAİN, bir nöroloji doktorunun rehberliğinde, bilimsel temelli zihin egzersizleri ve nöropsikometrik testler sunan kapsamlı bir platformdur. Amacımız, hafızanızı keskinleştirmek, dikkatinizi artırmak, problem çözme becerilerinizi geliştirmek ve genel bilişsel sağlığınızı desteklemektir. Ücretsiz ve etkileşimli oyunlarımızla beyin fitness'ınızı bir üst seviyeye taşıyın.
+                DEEP BRAİN, nöroloji doktorunun rehberliğinde, bilimsel temelli zihin egzersizleri ve nöropsikometrik testler sunan kapsamlı bir platformdur. Amacımız, hafızanızı keskinleştirmek, dikkatinizi artırmak, problem çözme becerilerinizi geliştirmek ve genel bilişsel sağlığınızı desteklemektir. Ücretsiz ve etkileşimli egzersiz ve oyunlarımızla beyininizi zinde tutun.
             </p>
             <div class="call-to-action-buttons">
                 <a href="/tr/games.html" class="cta-button">Zihinsel Egzersiz & Oyunlar</a>
