--- a/tr/games.html
+++ b/tr/games.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="page-games">
     <header>
         <h1>DEEP BRAİN</h1>
         <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
@@ -49,5 +49,5 @@
         <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
     <script src="/script.js"></script>
-</body>
+<body id="page-games">
 </html>
