--- a/en/games.html
+++ b/en/games.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="page-games-en">
     <header>
         <h1>DEEP BRAIN</h1>
         <p>Cognitive Exercises Guided by a Neurology Doctor</p>
@@ -50,5 +50,5 @@
         <p>© 2025 - Deep Brain. All rights reserved.</p>
     </footer>
     <script src="/script.js"></script>
-</body>
+<body>
 </html>
